from workspace to single crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
-name = "FlyPath"
+name = "flyPath"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
+crossbeam-channel = "0.5.13"           # Dependency for crossbeam channel
+wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }  # Other dependencies for drone
 
 [dev-dependencies]
 toml = "0.8.19"
 crossbeam-channel = "0.5.13"
-
-[workspace]
-members = ["crates/drone"]
