--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 crossbeam-channel = "0.5.13"           # Dependency for crossbeam channel
-wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }  # Other dependencies for drone
+wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "partial_eq"] }  # Other dependencies for drone
 
 [dev-dependencies]
 toml = "0.8.19"
