--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,22 @@ edition = "2021"
 [dependencies]
 crossbeam-channel = "0.5.13"# Dependency for crossbeam channel
 wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }  # Other dependencies for drone
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 rand = "0.8.5"
 
+[dependencies.serde]
+version = "1.0"
+optional = true
+features = ["derive"]
+
+[dependencies.serde_json]
+version = "1.0"
+optional = true
+
 [features]
-modes=[]
+modes = ["serde", "serde_json"]
 
 [dev-dependencies]
 toml = "0.8.19"
-crossbeam-channel = "0.5.13"
 
 [[example]]
 name = "default_command" 
